--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
     <script src="lang/en.js"></script>
 </head>
 <body>
-    <button id="insert"></button>
     <textarea name="sql_input_area" id="sql_input_area"></textarea>
+    <button id="insert"></button>
     <button id="submit"></button>
     <div id="output"></div>
+    <script src="js/SQLQueryManager.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
